Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15550 closed bug (fixed)

SiS191 Gigabit Ethernet Adapter doesn't work

Reported by: jmairboeck Owned by: waddlesplash
Priority: normal Milestone: R1/beta2
Component: Drivers/Network/sis19x Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I finally had time to test Ethernet on my old ASUS F5SL laptop. It seems that this doesn't work at all. It doesn't get any response from DHCP, and configuring it manually doesn't result in a working connection either.

When deactivating and (trying to) reactivate the adapter from network settings, the whole system freezes completely and doesn't respond to keyboard or mouse input any more, not even the KDL shortcut works.

Using hrev53635 on x86_64

(This time I have no idea what's wrong and I don't have a patch ready. ;)

Attachments (2)

syslog (370.1 KB ) - added by jmairboeck 5 years ago.
syslog (contains two boot sequences because I had to forcefully shutdown the computer)
syslog.2 (360.1 KB ) - added by jmairboeck 5 years ago.

Download all attachments as: .zip

Change History (14)

by jmairboeck, 5 years ago

Attachment: syslog added

syslog (contains two boot sequences because I had to forcefully shutdown the computer)

comment:1 by waddlesplash, 5 years ago

Appears the SiS19x driver is one of the native drivers and not a FreeBSD one; it has a lot of TODOs about being slow, and I wouldn't be surprised if it's just not well tested. Likely we should just replace it with the equivalent FreeBSD one.

comment:2 by waddlesplash, 5 years ago

Owner: changed from nobody to waddlesplash
Status: newassigned

comment:3 by waddlesplash, 5 years ago

The syslog seems to indicate that your WiFi card will work, though -- does it?

in reply to:  3 comment:4 by jmairboeck, 5 years ago

Replying to waddlesplash:

The syslog seems to indicate that your WiFi card will work, though -- does it?

Yes, that's what I am using since setting up the laptop. It works (nearly) without problems, but my Wi-Fi is a bit unstable, so I wanted to switch to Ethernet.

(It only broke in hrev53610, but I still had my checkout from the fix for #15499 with a working build, and you fixed it quickly.)

comment:5 by waddlesplash, 5 years ago

Driver replaced with the FreeBSD one in hrev53638; please retest.

comment:6 by jmairboeck, 5 years ago

It does not work yet, but there is improvement. It doesn't lock up the system any more after deactivating and re-activating the adapter in network settings. However, I still don't get a DHCP response and therefore, no connection.

Additionally, the displayed MAC address is wrong.

the output of ifconfig for the device is

/dev/net/sis19x/0
        Hardware type: Ethernet, Address: ac:81:ff:ff:ff:ff
        Media type: 1 GBit, 1000BASE-T
        inet addr: --, Bcast: --, Mask: --
        MTU: 1500, Metric: 0, up broadcast link configuring
        Receive: 0 packets, 0 errors, 0 bytes, 0 mcasts, 0 dropped
        Transmit: 157 packets, 0 errors, 48670 bytes, 0 mcasts, 0 dropped
        Collisions: 0

The first two displayed bytes of the MAC addreass are random, they were different before rebooting (after the update).

I'll attach a new syslog.

by jmairboeck, 5 years ago

Attachment: syslog.2 added

comment:7 by jmairboeck, 5 years ago

The correct MAC address should be 00:22:15:2b:51:e7 (according to the PXE boot rom).

comment:8 by jmairboeck, 5 years ago

I have just tested FreeBSD 12.1 from a live USB stick. The ethernet adapter works there. I get a valid IP address with dhclient sge0 and can successfully ping other machines.

So there is definitely a problem somewhere in the compatibility layer in Haiku.

comment:9 by waddlesplash, 5 years ago

The MAC address problem, and thus also DHCP, should be fixed in hrev53652. Please retest.

comment:10 by jmairboeck, 5 years ago

It works now, using hrev53652. Thank you for fixing this!

comment:11 by waddlesplash, 5 years ago

Resolution: fixed
Status: assignedclosed

No problem, thanks for the feedback!

comment:12 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.