sis19x: Replace native driver with the one from FreeBSD 12.

As per #15550, it seems the native driver does not work and causes
the system to lock up. Hopefully the FreeBSD driver will fare better.